# vectoria

./: .env.example  .gitignore  README.md  docker-compose-cpu.yml  docker-compose.dev.yml  docker-compose.yml  init.sh  init.sql.template
api/: Dockerfile  Dockerfile.cpu  README.md  dev.py  pyproject.toml
api/app/: auth.py  config.py  database.py  logging_config.py  main.py  models.py  services.py  tools.py
