[project]
name = "api"
version = "0.1.0"
description = "Vectoria API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.120.3",
    "markitdown[pdf, docx, pptx, xlsx, xls, outlook]>=0.1.3",
    "openai>=2.6.1",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sentence-transformers>=3.3.1",
    # Force CPU-only torch
    "torch>=2.0.0 ; platform_machine == 'x86_64'",
]


[project.scripts]
dev = "dev:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]


# ADD THIS SECTION - tells uv where to get CPU wheels
[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
